docs/apache-airflow-providers-openlineage/1.7.1/_sources/_api/airflow/providers/openlineage/conf/index.rst.txt
:py:mod:`airflow.providers.openlineage.conf`
============================================

.. py:module:: airflow.providers.openlineage.conf


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.openlineage.conf.config_path
   airflow.providers.openlineage.conf.is_source_enabled
   airflow.providers.openlineage.conf.disabled_operators
   airflow.providers.openlineage.conf.selective_enable
   airflow.providers.openlineage.conf.custom_extractors
   airflow.providers.openlineage.conf.namespace
   airflow.providers.openlineage.conf.transport
   airflow.providers.openlineage.conf.is_disabled



.. py:function:: config_path(check_legacy_env_var = True)

   [openlineage] config_path.


.. py:function:: is_source_enabled()

   [openlineage] disable_source_code.


.. py:function:: disabled_operators()

   [openlineage] disabled_for_operators.


.. py:function:: selective_enable()


.. py:function:: custom_extractors()

   [openlineage] extractors.


.. py:function:: namespace()

   [openlineage] namespace.


.. py:function:: transport()

   [openlineage] transport.


.. py:function:: is_disabled()

   [openlineage] disabled + some extra checks.


